@@ -26,7 +26,7 @@ OR (not recommended)
 
 ### Roadmap: v0.2-alpha
 - ~~Modification of Server component, adherence to architecture principles.~~
-- Improvement and standardization of exception handling.
+- ~~Improvement and standardization of exception handling.~~
 - ~~Improvement of URI parsing.~~
 - ~~Improvement of chache handling.~~
 - ~~Improvement of dev and prod domain configuration.~~
