@@ -14,6 +14,7 @@
 - Server component is now a unique class with unique traits. Is not a component anymore.
 - Bee::env method now supports default value if environment variable is not found.
 - Improved URI parsing and path normalization.
+- Improved Exception handling for easier maintenance.
 
 #### Fixed
 - Unauthorized redirect path not working for views, throws 403.
